[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semi-nmf-atomic-pdf"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]